Implemented new page to show and edit history
